--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     /* Error linea 50 tex-light por tex-dark */ 
 
-    <header id="Hero-Section" class="text-dark text-end py-5 mt-5">
+    <header id="Hero-Section" class="text-light text-end py-5 mt-5">
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
                 <h1 class="display-1 fw-bold my-5">
@@ -77,7 +77,7 @@
 
         <div class="row">
             <div class="col-12 col-md-4">
-                <i class="fas fa-3x my-3"></i> /*fa-camera*/
+                <i class="fas fa-camera fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Fotógrafa de mis trabajos</h3>
                 <p class="my-3">
                     Toda la información sobre nuestro trabajo la pueden encontrar en www.instagram.com/apedidosluz/
