Cambio color footer

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     /* Error linea 50 tex-light por tex-dark */ 
 
-    <header id="Hero-Section" class="text-light text-end py-5 mt-5">
+    <header id="Hero-Section" class="text-dark text-end py-5 mt-5">
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
                 <h1 class="display-1 fw-bold my-5">
@@ -195,7 +195,7 @@
 
 
 
-    <footer class="bg-dark text-center text-light p-4">
+    <footer class="bg-primary text-center text-light p-4">
         <p class="mb-0">Apedidos Luz 2022. Todos los derechos reservados.</p>
     </footer>
 
